--- a/登录口攻击路径_渗透实战手册.md
+++ b/登录口攻击路径_渗透实战手册.md
@@ -20,16 +20,16 @@ tags:
 ---
 
 ## 目录
-- [一、概述与攻击面分层](#一-概述与攻击面分层)
-- [二、检测与初始侦查（信息收集）](#二-检测与初始侦查信息收集)
-- [三、基础认证攻击（高风险）](#三-基础认证攻击高风险)
-- [四、输入验证与注入类漏洞（高风险）](#四-输入验证与注入类漏洞高风险)
-- [五、认证/逻辑绕过与越权（高风险）](#五-认证逻辑绕过与越权高风险)
-- [六、验证码与反自动化机制绕过（中风险）](#六-验证码与反自动化机制绕过中风险)
-- [七、信息泄露与前端分析（中风险）](#七-信息泄露与前端分析中风险)
-- [八、外围侦查与旁站](#八-外围侦查与旁站)
-- [九、实战流程模板](#九-实战流程模板)
-- [十、风险汇总表与防御建议（扩展代码示例）](#十-风险汇总表与防御建议扩展代码示例)
+- [一、概述与攻击面分层](#一概述与攻击面分层)
+- [二、检测与初始侦查（信息收集）](#二检测与初始侦查信息收集)
+- [三、基础认证攻击（高风险）](#三基础认证攻击高风险)
+- [四、输入验证与注入类漏洞（高风险）](#四输入验证与注入类漏洞高风险)
+- [五、认证/逻辑绕过与越权（高风险）](#五认证逻辑绕过与越权高风险)
+- [六、验证码与反自动化机制绕过（中风险）](#六验证码与反自动化机制绕过中风险)
+- [七、信息泄露与前端分析（中风险）](#七信息泄露与前端分析中风险)
+- [八、外围侦查与旁站](#八外围侦查与旁站)
+- [九、实战流程模板](#九实战流程模板)
+- [十、风险汇总表与防御建议（扩展代码示例）](#十风险汇总表与防御建议扩展代码示例)
 - [附录](#附录)
 
 ---
