--- a/登录口攻击路径_渗透实战手册.md
+++ b/登录口攻击路径_渗透实战手册.md
@@ -98,8 +98,9 @@ tags:
 **检测**
 - 在用户名或密码处尝试 `' OR '1'='1`、`' OR 1=1 -- ` 等
 - 注意服务端是否拼接 SQL 字符串并返回成功
-	![image.png](https://www.tianren-lacia.top/20251006115619.png)
 	
+	![image.png](https://www.tianren-lacia.top/20251006115619.png)
+
 **防御**
 - 使用参数化查询/ORM、输入白名单、最小权限数据库账号
 
@@ -110,6 +111,7 @@ tags:
 ### 4. SQLi（SQL 注入）
 - 检测：特殊字符、延时注入、布尔盲注
 - 工具：sqlmap（注意合法授权）
+	
 	![image.png](https://www.tianren-lacia.top/20251006115822.png)
 	
 - 防御：参数化、ORM、最小权限数据库账号、WAF 规则
@@ -136,9 +138,11 @@ tags:
 **检测**：拦截成功登录的响应，分析前端是否基于某字段判定权限，再尝试直接调用高权限接口或权限字段参数 bypass 后端校验。
 - 登录：
 	登录验证示例：
+
 	![image.png](https://www.tianren-lacia.top/20251008205830.png)
-	
+
 	如果是前段验证，甚至可以找到并修改前端代码使之变成永真语句
+
 	![image.png](https://www.tianren-lacia.top/20251008210303.png)
 	
 - 密码重置：
@@ -147,6 +151,7 @@ tags:
 	![f9070502a2401d12bc32b07b9451e7b3.png](https://www.tianren-lacia.top/f9070502a2401d12bc32b07b9451e7b3.png)
 	
 	成功绕过限制跳转到输入新密码页面，在数据包加上第一步的token后，输入新密码后修改成功。
+
 	![image.png](https://www.tianren-lacia.top/20251008224731.png)
 	
 **防御**：所有权限决策必须在后端强制校验；不要在前端保存或信任权限位（token payload 除外，应由服务器签名）。
@@ -158,12 +163,17 @@ tags:
 ### 10. 任意注册、权限赋予与账户覆盖
 **风险点**：
 - 注册功能是否可注册管理员权限账号：
+	
 	![a4a35177354eee797c0e2639b4877b8c.png](https://www.tianren-lacia.top/a4a35177354eee797c0e2639b4877b8c.png)
-	
+
 - 是否任意注册账户覆盖，实现账号接管：
-	数据包如下，可以看到数据包有个code参数，正常发包注册成功：	![image.png](https://www.tianren-lacia.top/20251008224912.png)
+	数据包如下，可以看到数据包有个code参数，正常发包注册成功：
+
+	![image.png](https://www.tianren-lacia.top/20251008224912.png)
 	
-	尝试修改请求包，把code参数去掉，发包，注册成功。	![image.png](https://www.tianren-lacia.top/20251008225027.png)
+	尝试修改请求包，把code参数去掉，发包，注册成功。
+
+	![image.png](https://www.tianren-lacia.top/20251008225027.png)
 	
 	两者注册同一账号返回包都如下，都注册成功。
 	{"code":10000,"message":"success","data":true)}
@@ -172,6 +182,7 @@ tags:
 ### 11. IDOR（Insecure Direct Object Reference，遍历ID越权）（高）
 - 检查资源访问是否仅通过可预测的 ID 控制（例如 `/user/123/profile`）
 - **测试**：遍历不同 ID，观察是否返回他人数据
+  
 	![image.png](https://www.tianren-lacia.top/20251008221907.png)
 	
 - **防御**：基于主体的访问控制（RBAC/ABAC）、不可预测 ID（UUID）并在服务器侧校验归属关系
@@ -184,6 +195,7 @@ tags:
 
 ### 13. 特殊示例：微信小程序登录三要素
 - 小程序接口通常含 `encryptedData`、`session_key`、`iv` 等，若后端解密或验证不严可导致手机号/账号接管
+  
 	![image.png](https://www.tianren-lacia.top/20251006211229.png)
 	![image.png](https://www.tianren-lacia.top/20251006211634.png)
 	
@@ -206,15 +218,19 @@ tags:
 ### 15. 手机短信验证码
 **风险点**：
 - 短信轰炸：利用bp的repeater、intruder模块或并发插件，滥用发送接口对目标手机号造成骚扰
+  
 	![image.png](https://www.tianren-lacia.top/20251008212844.png)
 	
 - 验证码返回：检查验证码是否在响应包中返回
+  
 	![image.png](https://www.tianren-lacia.top/20251006204849.png)
 	
 - 验证码双发：双写号码中间分号，如“138...;198...”，同一请求导致发送多个验证码
+  
 	![image.png](https://www.tianren-lacia.top/20251006202448.png)
 	
 - 短信内容修改：能否篡改短信模板或内容（请求包）
+  
 	![image.png](https://www.tianren-lacia.top/20251006201033.png)
 	![image.png](https://www.tianren-lacia.top/20251006201209.png)
 	
@@ -235,7 +251,11 @@ tags:
 ### 17. JS 中的敏感信息
 - **搜索关键词**：`password`、`secret`、`api_key`、`token`、`.map`
 - Source Map 泄露会还原源代码，暴露敏感逻辑
+  
 	![53e65ff105910baeb509b68fee36ccb3.png](https://www.tianren-lacia.top/53e65ff105910baeb509b68fee36ccb3.png)
+
+  泄露大量API路径和敏感信息，深入利用危害会加大
+  
 	![e19fd0b06522ab4c806859f085eb1061.png](https://www.tianren-lacia.top/e19fd0b06522ab4c806859f085eb1061.png)
 	
 - **防御**：构建发布流程中移除源映射、前端不存储密钥
@@ -243,6 +263,7 @@ tags:
 ### 18. API/接口发现
 - Swagger、GraphQL、Unprotected API 文档是高价值目标
 	Swagger接口未授权
+
 	![image.png](https://www.tianren-lacia.top/20251008215617.png)
 	![image.png](https://www.tianren-lacia.top/20251008215451.png)
 	
@@ -250,6 +271,7 @@ tags:
 
 ### 19. 日志/错误消息泄露
 - 详细堆栈或 SQL 错误会泄露内部实现
+  
 	![image.png](https://www.tianren-lacia.top/20251008002129.png)
 	
 - 防御：生产环境关闭详细堆栈，统一返回模糊错误
@@ -262,6 +284,7 @@ tags:
 ### 20. 端口、目录与旁站扫描
 - 对登录服务 IP 扫描其他端口、目录（ssh、redis、memcached、管理端口）
 	端口和目录扫描扫出nacos接口，后续直接工具利用
+
 	![image.png](https://www.tianren-lacia.top/20251008211213.png)
 	
 - 旁站常见泄露：开发调试页面、备份、旧版服务
@@ -274,6 +297,7 @@ tags:
 - 识别框架/版本（Shiro、Struts、ThinkPHP、WordPress 插件等）
 - 使用 CVE/nuclei 模板做高概率验证（谨慎，需授权）
 	例：shiro反序列化漏洞（响应头存在rememberMe字段）
+
 	![image.png](http://www.tianren-lacia.top/20250731094620685.png)
 	
 
