--- a/登录口攻击路径_渗透实战手册.md
+++ b/登录口攻击路径_渗透实战手册.md
@@ -39,7 +39,7 @@ tags:
 一个登录入口并非孤立组件，它与会话管理、用户注册、密码找回、第三方登录、前端 JS、后端 API、子域名及同 IP 的其它服务紧密相连。本文将攻击面按功能/风险进行分层，便于在渗透测试报告中给出结构化发现。
 
 **分层（示例）**
-- 基础认证攻击（高）：弱口令、喷射、爆破、默认密码
+- 基础认证攻击（高）：弱口令、喷洒、爆破、默认密码
 - 输入验证与注入（高）：SQLi、XSS、SSRF、命令注入
 - 认证/逻辑绕过（高）：返回包篡改、IDOR、注册逻辑缺陷
 - 验证码与反自动化（中高）：验证码复用、短信接口滥用
@@ -78,7 +78,7 @@ tags:
 - 强制复杂度与最小长度、禁止默认口令、首次登录强制重置
 - 多因素认证（MFA）
 
-**补充：密码喷射（Password Spraying）**
+**补充：密码喷洒（Password Spraying）**
 - **描述**：对大量账号使用少数常见密码（例如 Password123），以规避锁定机制。
 - **防御**：基于风险的登录限制、动态阈值、MFA，建议实施基于用户行为的动态锁定策略（如：5分钟内同一账号错误3次锁定，但允许不同账号尝试），避免影响正常用户。
 
@@ -86,7 +86,7 @@ tags:
 
 ### 2. 密码爆破（中高）
 **注意点**
-- 若存在账号锁定/速率限制或验证码需避免爆破（应使用账号喷射与监测差异化响应）
+- 若存在账号锁定/速率限制或验证码需避免爆破（应使用账号喷洒与监测差异化响应）
 - 识别登录响应差异（响应时间/内容长度/HTTP状态）
 
 **防御**
@@ -225,7 +225,11 @@ tags:
 	
 	![image.png](https://www.tianren-lacia.top/20251006204849.png)
 	
-- 验证码双发：双写号码中间分号，如“138...;198...”，同一请求导致发送多个验证码
+- 验证码双发：同一请求导致发送多个验证码。
+	- 常见3种号码双写：
+		1. 分号：phone=138...;198... / phone=138...;phone=137...
+		2. 逗号：phone=138...,198... / phone=138...,phone=137...
+		3. &：phone=138...&198... / phone=138...&phone=137...
 	
 	![image.png](https://www.tianren-lacia.top/20251006202448.png)
 	
@@ -233,7 +237,7 @@ tags:
 	
 	![image.png](https://www.tianren-lacia.top/20251006201033.png)
 	![image.png](https://www.tianren-lacia.top/20251006201209.png)
-	
+- 验证码复用：服务端验证一次成功后没有立即作废验证码，给其他账户提交也能通过验证
 - 验证码爆破：验证码位数较少或能无限重试
 - 默认验证码：系统使用000000、123456等默认值
 
@@ -307,7 +311,7 @@ tags:
 ## 基础渗透流程参考
 1. 信息收集（页面、JS、SourceMap、旁站、子域、指纹）
 2. 目录 + 接口发现
-3. 弱口令 + 喷射测试（优先被动观察）
+3. 弱口令 + 喷洒测试（优先被动观察）
 4. 注入类漏洞检测（先手工，后半自动）
 5. 认证逻辑审计（IDOR、返回字段、权限判定）
 6. 绕过验证码与短信测试
@@ -320,7 +324,7 @@ tags:
 | 攻击向量            | 风险等级 | 常见发现点                  | 防御要点                |
 | --------------- | ---: | ---------------------- | ------------------- |
 | 弱口令 / 默认口令      |    高 | 初始管理员、默认组件             | 强制密码策略、MFA、首次登录强制修改 |
-| 密码喷射 / 爆破       |    高 | 登录接口无速率限制              | IP 限流、账户限流、行为监控     |
+| 密码喷洒 / 爆破       |    高 | 登录接口无速率限制              | IP 限流、账户限流、行为监控     |
 | SQLi（登录参数）      |    高 | 字符串拼接的登录查询             | 参数化查询、WAF、最小权限      |
 | XSS（错误提示）       |    中 | login error / redirect | 输出编码、CSP            |
 | SSRF（URL 参数）    |    高 | 头像、导入 URL              | 白名单、内部地址拒绝          |
@@ -363,7 +367,7 @@ app.use(session({
 }));
 ```
 
-### 3) 登录速率限制（防爆破 / 喷射）
+### 3) 登录速率限制（防爆破 / 喷洒）
 ```js
 // 使用 express-rate-limit
 const rateLimit = require('express-rate-limit');
