--- a/登录口攻击路径_渗透实战手册.md
+++ b/登录口攻击路径_渗透实战手册.md
@@ -451,8 +451,8 @@ app.use(helmet({
 ```
 
 ### 8) 发布流程：移除 Source Map（示例脚本）
+`package.json 的构建脚本示例（简化）`
 ```json
-// package.json 的构建脚本示例（简化）
 {
   "scripts": {
     "build": "webpack --mode=production && rm -f dist/*.map"
