--- a/登录口攻击路径_渗透实战手册.md
+++ b/登录口攻击路径_渗透实战手册.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Web 渗透实战手册：开局一个登录口，你能想到多少种攻击路径？（重构版）"
+title: "Web 渗透实战手册：开局一个登录口，你能想到多少种攻击路径？"
 date: 2025-09-22
 categories:
   - 渗透测试
