--- a/登录口攻击路径_渗透实战手册.md
+++ b/登录口攻击路径_渗透实战手册.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Web 渗透实战手册：开局一个登录口，你能想到多少种攻击路径？"
+title: Web 渗透实战手册：开局一个登录口，你能想到多少种攻击路径？
 date: 2025-09-22
 categories:
   - 渗透测试
@@ -21,15 +21,14 @@ tags:
 
 ## 目录
 - [一、概述与攻击面分层](#一概述与攻击面分层)
-- [二、检测与初始侦查（信息收集）](#二检测与初始侦查信息收集)
+- [二、检测与初始侦查（初等信息收集）](#二检测与初始侦查初等信息收集)
 - [三、基础认证攻击（高风险）](#三基础认证攻击高风险)
 - [四、输入验证与注入类漏洞（高风险）](#四输入验证与注入类漏洞高风险)
 - [五、认证/逻辑绕过与越权（高风险）](#五认证逻辑绕过与越权高风险)
 - [六、验证码与反自动化机制绕过（中风险）](#六验证码与反自动化机制绕过中风险)
 - [七、信息泄露与前端分析（中风险）](#七信息泄露与前端分析中风险)
-- [八、外围侦查与旁站](#八外围侦查与旁站)
-- [九、实战流程模板](#九实战流程模板)
-- [十、风险汇总表与防御建议（扩展代码示例）](#十风险汇总表与防御建议扩展代码示例)
+- [八、外围侦查与旁站（再次信息收集）](#八外围侦查与旁站再次信息收集)
+- [九、风险汇总表与防御建议（扩展代码示例）](#九风险汇总表与防御建议扩展代码示例)
 - [附录](#附录)
 
 ---
@@ -39,36 +38,76 @@ tags:
 一个登录入口并非孤立组件，它与会话管理、用户注册、密码找回、第三方登录、前端 JS、后端 API、子域名及同 IP 的其它服务紧密相连。本文将攻击面按功能/风险进行分层，便于在渗透测试报告中给出结构化发现。
 
 **分层（示例）**
+- （初等信息收集）检测与初始侦查：指纹、源码、目录接口、JS文件、参数、交互回显
 - 基础认证攻击（高）：弱口令、喷洒、爆破、默认密码
 - 输入验证与注入（高）：SQLi、XSS、SSRF、命令注入
 - 认证/逻辑绕过（高）：返回包篡改、IDOR、注册逻辑缺陷
 - 验证码与反自动化（中高）：验证码复用、短信接口滥用
-- 信息泄露（中）：JS 硬编码、Source Map、Swagger/GraphQL 泄露
-- 周边与旁站（中低）：子域名、端口、管理面板
+- 信息泄露（中）：接口目录、JS 硬编码、Source Map、Swagger/GraphQL泄露
+- （再次信息收集）周边与旁站：下属或控股资产、子域名、端口、管理面板
 
 ---
 
-# 二、检测与初始侦查（信息收集）
+# 二、检测与初始侦查（初等信息收集）  
+>“渗透的本质是信息收集”，信息收集非常重要。
+>先把登录口当成一个黑盒拆干净——只聚焦登录页本身及其直接暴露的攻击面，根据该站信息进行一遍渗透后，如果发现不行再进入“再次信息收集”阶段：扫端口、子域爆破、旁站、控股资产等——用新的攻击面反哺登录口，再进行一遍渗透，如此循环，或直接换目标。
 
-**目标信息**
-- 登录页面 URL、请求参数、返回格式（JSON/HTML）
-- Cookie/Session 名称与生命周期
-- 注册、忘记密码、重置密码、OAuth 回调、头像拉取等相关接口
-- 前端 JS、Source Map、隐藏的 API 地址
-- 同 IP 端口、目录扫描与其他子域
+### 推荐工具&插件
+1. **信息搜集工具**：
+	- 无影（TscanPlus）：集成指纹、目录、接口、Swagger、Nacos 等一站式登录面侦察
+2. **bp插件**：
+	- HAE：自动高亮请求/响应中的手机号、邮箱、API 路径等 20+ 类敏感关键字，登录页注释一眼可见。
+	- TsojanScan：被动扫描国产中间件默认路由、备份文件、Spring 网关，适合“不主动爆破就捡洞”。
+3. **浏览器插件**：
+	- 雪瞳：❄️国产生态指纹库，瞬间标出若依、Jeecg、CAS、O2OA 等登录框架，并附带默认路径入口。
+	- Wappalyzer：老牌栈识别，前端框架、后端语言、CDN、Analytics 全部列队展示。
+	- Cookie-Editor：可视化增删改 Cookie，快速测试“只改某字段能否进后台”而无需脚本。
 
-**推荐流程**
-1. 手动打开登录页，保存请求（Burp -> Target -> Site map）
-2. 检查页面源代码、加载的 JS、Source Map（`.map`）
-3. 使用 dirsearch/gobuster/ffuf 扫描常见管理路径（/admin、/login、/api）
-4. 子域枚举（subfinder/amass/assetfinder），被动探测 (crt.sh, Censys)
-5. 指纹识别（WhatWeb / Wappalyzer / nuclei fingerprints）
-6. 如可，登录后捕获业务请求用于后续逻辑分析
+### 指纹与已知漏洞关联（初等阶段只做“轻量级”比对）
+1. **快速识别框架/中间件**  
+   - 用 Wappalyzer /雪瞳/无影指纹识别：Spring Boot、Shiro、ThinkPHP、Jeecg、CAS 等关键字出现即高亮记录  
+   - 响应头里 `X-Powered-By: Express`、`Server: nginx/1.18.0` 也记下，后续可查对应 CVE  
+2. **“一眼洞”规则速查**  
+   - Shiro：响应头带 `rememberMe=deleteMe` → 直接贴「Shiro 反序列化待验」标签  
+   - Spring Boot：看到 `/actuator`、`/env` 200 返回 → 贴「Spring 监控接口泄露」标签  
+   - ThinkPHP：HTML 注释出现 `TP版本`、`/public/index.php` → 贴「TP5 RCE 待验」标签  
+   - 只做标记，不发送任何 Payload；具体验证留到正式攻击阶段  
+
+### 前端静态拆包
+1. **查看源码**
+   - 注释里常掉出测试账号、内网地址、TODO  
+2. **收集 JS**
+   - 全局搜关键字：`api`, `url`, `path`, `admin`, `guest`, `test`, `pass`, `token`, `secret`, `reset`, `ws:`  
+   - 发现 `.map` → 自动解析 SourceMap（burp 插件 "SourceMapper" 或 npm 包 `reverse-sourcemap`），还原目录结构 + 路由表  
+3. **把前端路由与后端接口区分**  
+   - React/Vue 路由以 `#/` 开头，可暂时忽略；关注 `/api/*`、`/auth/*`、`/login/*` 这类真实后端前缀
+   - 尝试目录递增递减枚举，发现可利用目录和接口
+4. **找出“隐藏参数”**  
+   - 登录 POST 体除了 `username/password` 是否还有 `captchaKey`、`execution`、`_token`、`lt`（CAS）、`sessionID`？先记下名字与出现位置，为后续注入/逻辑绕过做准备  
+
+### 交互差异探测
+1. 输入一个“一定不存在”的用户名 + 任意密码  
+   - 观察返回：  
+     - 200 vs 401 vs 302  
+     - 响应体长度、延迟、错误文案（"用户不存在" / "密码错误"）  
+   - 若提示不同 → 用户名枚举已成立，先写入临时风险点  
+2. 输入一个“超长/特殊字符”密码（80 位 + `'"><`）  
+   - 返回 500 或 SQL 异常关键字 → 可能拼接 SQL，先贴标签  
+3. 重复提交同一验证码/空验证码字段  
+   - 若仍返回“密码错误”而非“验证码错误” → 后端极可能没校验验证码，可直接进入爆破逻辑  
+
+### 登录流链路梳理
+1. 画出“登录按钮按下后”完整序列
+   - 302 跳转顺序  
+   - 是否伴随 OAuth、CAS、SSO、二次短信、图形验证码、滑块
+   - 哪些请求带 `Set-Cookie`，哪些带 `Authorization: Bearer`
+2. 把“关键判断节点”标红
+   - 例如 `/api/auth` 返回 `{"needCaptcha":true}` → 后续可尝试篡改该节点直接 false
+   - 出现 `redirect_uri` → 记录其域名、路径、是否校验严格
 
 ---
 
 # 三、基础认证攻击（高风险）
-
 ### 1. 弱口令与默认口令（高）
 **检测要点**
 - 尝试常见凭据（admin:admin、root:root、test:test）
@@ -105,7 +144,6 @@ tags:
 - 使用参数化查询/ORM、输入白名单、最小权限数据库账号
 
 ---
-
 # 四、输入验证与注入类漏洞（高风险）
 
 ### 4. SQLi（SQL 注入）
@@ -130,7 +168,6 @@ tags:
 - 防御：避免直接拼接命令、使用安全库
 
 ---
-
 # 五、认证/逻辑绕过与越权（高风险）
 
 ### 8. 返回包篡改 
@@ -195,14 +232,12 @@ tags:
 
 ### 13. 特殊示例：微信小程序登录三要素
 - 小程序接口通常含 `encryptedData`、`session_key`、`iv` 等，若后端解密或验证不严可导致手机号/账号接管
-	
 	![image.png](https://www.tianren-lacia.top/20251006211229.png)
 	![image.png](https://www.tianren-lacia.top/20251006211634.png)
 	
 - **防御**：使用服务端对 session_key 做严格验证，避免在客户端做敏感决策
 
 ---
-
 # 六、验证码与反自动化机制绕过（中风险）
 
 ### 14. 图片验证码
@@ -249,7 +284,6 @@ tags:
 - 防御：需配合设备指纹（如FingerprintJS）与请求上下文（IP信誉库）进行综合风险评估
 
 ---
-
 # 七、信息泄露与前端分析（中风险）
 
 ### 17. JS 中的敏感信息
@@ -271,7 +305,7 @@ tags:
 	![image.png](https://www.tianren-lacia.top/20251008215617.png)
 	![image.png](https://www.tianren-lacia.top/20251008215451.png)
 	
-- 防御：认证保护 API 文档、对外隐藏或基于 IP 访问控制
+- **防御**：认证保护 API 文档、对外隐藏或基于 IP 访问控制
 
 ### 19. 日志/错误消息泄露
 - 详细堆栈或 SQL 错误会泄露内部实现
@@ -281,45 +315,62 @@ tags:
 - 防御：生产环境关闭详细堆栈，统一返回模糊错误
 
 ---
+# 八、外围侦查与旁站（再次信息收集）
 
-# 八、外围侦查与旁站
->如果该站打不出洞，可以试试通过信息搜集来外围侦查、搜索旁站，以绕过防护较强的站点，攻击较偏僻、维护少、防护薄弱的旁站
+>如果该站打不出洞，可以试试通过信息搜集来外围侦查、搜索旁站、查找企业>=51%控股公司，以绕过防护较强的站点，攻击较偏僻、维护少、防护薄弱的旁站，工具推荐TscanPlus（无影），资产测绘推荐上某鱼捞个几块/月的FOFA的API，可接入无影
 
-### 20. 端口、目录与旁站扫描
+### 寻找控股公司资产（控股>=51%）
+- **注意事项**：项目和攻防时会认控股>=51%的公司资产，但日常上交漏洞给SRC平台可能驳回，最终解释权归SRC平台，如果100%控股，基本实锤
+- **股权穿透**：用天眼查/企查查“最终受益人”功能，一层层往上找，当看见目标企业 A 对 B 持股 ≥51%（或 100%）时，把 B 的全量域名、备案 APP、公网 IP 段一次性导出来——这些在 SRC 里大概率算同一资产。  
+- **并表关键字**：按住 Ctrl+F 在 A 的年报里搜“并入财务报表”“纳入合并范围”，只要出现 B 的公司名，就能坐实“亲儿子”身份，后续交漏洞不会被拒收。  
+- **批量拉取**：把 B 的名称丢进 FOFA `org="B公司关键字"`，`icp="B公司备案号"`，一键捞出旁站、测试域、旧版接口；再丢 TscanPlus 自动跑端口、目录、Spring 网关、Nacos、Swagger、Actuator——控股公司往往防护薄弱，容易出高危。  
+- **预报告**：挖到洞后先贴股权图+年报截图到 SRC“资产归属疑问”工单，运营 10 分钟就会回“可接收”，再正式交漏洞，赏金稳稳到账。
+
+### 端口、目录与旁站扫描
 - 对登录服务 IP 扫描其他端口、目录（ssh、redis、memcached、管理端口）
-	端口和目录扫描扫出nacos接口，后续直接工具利用
+	**例1**：端口扫描和通过指纹识别出spring，用spring目录字典扫描出gateway/
+	
+	![image.png](https://www.tianren-lacia.top/20251106214747.png)
+	
+	该URL没信息，再递增一级目录扫描
+	
+	![image.png](https://www.tianren-lacia.top/20251106215232.png)
+	
+	泄露token和接口
+	
+	![image.png](https://www.tianren-lacia.top/20251106221920.png)
+	![image.png](https://www.tianren-lacia.top/20251106221928.png)
+	
+	最后根据拼接接口和提供的body示例能查询敏感信息
+	![image.png](https://www.tianren-lacia.top/20251106222646.png)
+	
+	**例2**：端口和目录扫描扫出nacos接口，后续直接工具利用
 	
 	![image.png](https://www.tianren-lacia.top/20251008211213.png)
 	
+	成功登录后翻配置文件，找找可利用信息再继续利用，如下，找到Redis密码和端口，可以直接连接成功
+	
+	![image.png](https://www.tianren-lacia.top/20251106224701.png)
+	
 - 旁站常见泄露：开发调试页面、备份、旧版服务
 
-### 21. 子域名与资产发现
+### 子域名与资产发现
 - 子域名通常更少维护，易有默认凭证或老旧接口
-- 工具：amass、subfinder、assetfinder、crt.sh
+-  尝试用资产测绘发现更多的资产，资产测绘推荐上某鱼捞个几块/月的FOFA的API，可接入无影工具
 
-### 22. 指纹与已知漏洞关联
-- 识别框架/版本（Shiro、Struts、ThinkPHP、WordPress 插件等）
+### 指纹与已知漏洞关联
+- 识别框架/版本（若依、Spring、jeecg、Shiro、Struts、ThinkPHP、WordPress 插件等）
 - 使用 CVE/nuclei 模板做高概率验证（谨慎，需授权）
 	例：shiro反序列化漏洞（响应头存在rememberMe字段）
 	
 	![image.png](http://www.tianren-lacia.top/20250731094620685.png)
 	
+	用工具扫描扫描并利用
+	
+	![image.png](http://www.tianren-lacia.top/20250731094755125.png)
 
 ---
-
-# 九、实战流程模板
-## 基础渗透流程参考
-1. 信息收集（页面、JS、SourceMap、旁站、子域、指纹）
-2. 目录 + 接口发现
-3. 弱口令 + 喷洒测试（优先被动观察）
-4. 注入类漏洞检测（先手工，后半自动）
-5. 认证逻辑审计（IDOR、返回字段、权限判定）
-6. 绕过验证码与短信测试
-7. 编写报告（复现步骤、POC、修复建议）
-
----
-
-# 十、风险汇总表与防御建议（扩展代码示例）
+# 九、风险汇总表与防御建议（扩展代码示例）
 
 | 攻击向量            | 风险等级 | 常见发现点                  | 防御要点                |
 | --------------- | ---: | ---------------------- | ------------------- |
